// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMonthPickerGrid > should return the correct 4 by 4 grid for the year 2023 and en-US locale 1`] = `
[
  [
    {
      "label": "Jan",
      "month": {
        "month": 0,
        "year": 2023,
      },
      "monthName": "January",
    },
    {
      "label": "Feb",
      "month": {
        "month": 1,
        "year": 2023,
      },
      "monthName": "February",
    },
    {
      "label": "Mar",
      "month": {
        "month": 2,
        "year": 2023,
      },
      "monthName": "March",
    },
    {
      "label": "Apr",
      "month": {
        "month": 3,
        "year": 2023,
      },
      "monthName": "April",
    },
  ],
  [
    {
      "label": "May",
      "month": {
        "month": 4,
        "year": 2023,
      },
      "monthName": "May",
    },
    {
      "label": "Jun",
      "month": {
        "month": 5,
        "year": 2023,
      },
      "monthName": "June",
    },
    {
      "label": "Jul",
      "month": {
        "month": 6,
        "year": 2023,
      },
      "monthName": "July",
    },
    {
      "label": "Aug",
      "month": {
        "month": 7,
        "year": 2023,
      },
      "monthName": "August",
    },
  ],
  [
    {
      "label": "Sep",
      "month": {
        "month": 8,
        "year": 2023,
      },
      "monthName": "September",
    },
    {
      "label": "Okt",
      "month": {
        "month": 9,
        "year": 2023,
      },
      "monthName": "Oktober",
    },
    {
      "label": "Nov",
      "month": {
        "month": 10,
        "year": 2023,
      },
      "monthName": "November",
    },
    {
      "label": "Dec",
      "month": {
        "month": 11,
        "year": 2023,
      },
      "monthName": "December",
    },
  ],
]
`;

exports[`buildMonthPickerGrid should return the correct 4 by 4 grid for the year 2023 and en-US locale 1`] = `
Array [
  Array [
    Object {
      "label": "Jan",
      "month": Object {
        "month": 0,
        "year": 2023,
      },
      "monthName": "January",
    },
    Object {
      "label": "Feb",
      "month": Object {
        "month": 1,
        "year": 2023,
      },
      "monthName": "February",
    },
    Object {
      "label": "Mar",
      "month": Object {
        "month": 2,
        "year": 2023,
      },
      "monthName": "March",
    },
    Object {
      "label": "Apr",
      "month": Object {
        "month": 3,
        "year": 2023,
      },
      "monthName": "April",
    },
  ],
  Array [
    Object {
      "label": "May",
      "month": Object {
        "month": 4,
        "year": 2023,
      },
      "monthName": "May",
    },
    Object {
      "label": "Jun",
      "month": Object {
        "month": 5,
        "year": 2023,
      },
      "monthName": "June",
    },
    Object {
      "label": "Jul",
      "month": Object {
        "month": 6,
        "year": 2023,
      },
      "monthName": "July",
    },
    Object {
      "label": "Aug",
      "month": Object {
        "month": 7,
        "year": 2023,
      },
      "monthName": "August",
    },
  ],
  Array [
    Object {
      "label": "Sep",
      "month": Object {
        "month": 8,
        "year": 2023,
      },
      "monthName": "September",
    },
    Object {
      "label": "Okt",
      "month": Object {
        "month": 9,
        "year": 2023,
      },
      "monthName": "Oktober",
    },
    Object {
      "label": "Nov",
      "month": Object {
        "month": 10,
        "year": 2023,
      },
      "monthName": "November",
    },
    Object {
      "label": "Dec",
      "month": Object {
        "month": 11,
        "year": 2023,
      },
      "monthName": "December",
    },
  ],
]
`;
